# docassemble-consultingdiagnostic

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/consultingdiagnostic/data/questions/: ai_generation.yml  assessment_intelligence_agent.yml  assessment_logic.yml  config.yml  data_loader.yml  document_generator.yml  features.yml  lollipop_chart.yml  main_interview.yml  pain_points.yml  processing.yml  questions.yml  radar_chart.yml  scoring.yml  title_page.yml  variables.yml
docassemble/consultingdiagnostic/data/static/: FinalQuestionsIDwScore.csv  OfferingsDescription.csv  ai_prompts.json  assessment_styles.css  pain_points.csv  site.webmanifest
docassemble/consultingdiagnostic/data/templates/: Assessment_Architecture_and_Build_Proposal_Insert.docx  Clarity_and_Visibility_Accelerator_Proposal_Insert.docx  Growth_and_Loyalty_Booster_Proposal_Insert.docx  Lead_Flow_Builder_Proposal_Insert.docx  Maturity_Model_Design_Sprint_Proposal_Insert.docx  Project_Excellence_Toolkit_Proposal_Insert.docx  Proposal_and_Pitch_Package_Proposal_Insert.docx  Services_That_Sell_Workshop_Proposal_Insert.docx  maturity_assessment_report.docx
