[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.consultingdiagnostic"
version = "0.0.3"
description = "A docassemble extension. assessment_intelligence (AI enabled help for each category)"
readme = "README.md"
authors = [
    { name = "System Administrator", email = "burcul_elvis@hotmail.com" },
]
dependencies = [
    "matplotlib>=3.10.5",
    "openai>=1.86.0",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
