[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.consultingdiagnostic"
version = "0.0.8"
description = "Word doc contains token counts - for testing purposes only"
readme = "README.md"
authors = [
    { name = "System Administrator", email = "burcul_elvis@hotmail.com" },
]
dependencies = [
    "matplotlib>=3.10.6",
    "openai>=1.86.0",
]

[project.urls]
Homepage = "https://github.com/eburcul1/docassemble-consultingdiagnostic.git"

[tool.setuptools.packages.find]
where = [
    ".",
]
